Add initial NexusUICanvas, and a simple example.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>MobX Boilerplate</title>
+    <title>NexusUI React Typescript Mobx Sample</title>
+    <script src="nexusUI.js"></script>
   </head>
   <body>
     <div id="root"></div>
